Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2013-12-31 12:31:50 -0500
  - support for MS Visual Studio C++ on MSWin32

0.04      2013-12-24 17:05:15 -0500
  - Fix method links

0.03      2013-12-24 16:18:17 -0500
  - First CPAN release

0.02      2013-12-24 15:58:08 -0500
  - support for libarchive 2.x
  - support for Strawberry / MSWin32

0.01      2013-12-23 15:37:33 -0500
  - initial version